# pyTitration

./: README.md  acid_titration.csv  base_titration.csv  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
examples/: acid_mix_titration.csv  gelatin_maa_titration.csv  gelatin_titration.csv  gelatin_titration_buffered.csv  simple_titration.csv  simple_usage_examples.py
src/pyTitration/: __init__.py  gui_calculator.py  k_values.py  titration.py  titration_curve.py
tests/: test_class.py
